# TADB-ADB

./: .gitignore  CMakeLists.txt  README.md  android.cmake  build.sh  libadb.cmake
.github/workflows/: build.yml
adb/: sysdeps.h
adb/client/: usb_libusb.cpp
adb/proto/: adb_known_hosts.pb.cc  adb_known_hosts.pb.h  app_processes.pb.cc  app_processes.pb.h  key_type.pb.cc  key_type.pb.h  pairing.pb.cc  pairing.pb.h
android/base/libs/androidfw/: ResourceTypes.cpp
android/base/libs/androidfw/include/androidfw/: StringPiece.h
android/core/libcutils/: native_handle.cpp
android/core/libutils/: Threads.cpp
android/libbase/: logging.cpp
android/libziparchive/: zip_archive.cc
android/logging/liblog/: logger_write.cpp
